Add const labels and left box text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <div class="flexbox-container">
             <div class="flexbox-item fb-left">
 
+                <div class="fb-left-title">
+
+                    Dublin Constituencies for
+                    <br> General Election 2020
+                </div>
+
                 <?xml version="1.0" encoding="utf-8"?>
                 <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                 <svg class="dub-map" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
@@ -187,6 +193,11 @@
                     <g id="points-layer">
                     </g>
                 </svg>
+
+                <div class="bottom-text-leftbox">
+
+                    Constituencies 11/11_____________Total eligble voting population 1,234,123
+                </div>
 
             </div>
             <!-- RIGHT BOX -->
