Fix bottom text and start right side

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <div class="fb-left-title">
 
-                    Dublin Constituencies for
+                    Dublin Constituencies
                     <br> General Election 2020
                 </div>
 
@@ -194,14 +194,27 @@
                     </g>
                 </svg>
 
-                <div class="bottom-text-leftbox">
 
-                    Constituencies 11/11_____________Total eligble voting population 1,234,123
+                <div class="bottom-text-leftbox">
+                    <div class="left-side-text">
+                        <p> Constituencies 11/11</p>
+                    </div>
+                    <div class="right-side-text">
+                        <p>Eligible voting population 1,234,123</p>
+                    </div>
+                </div>
+            </div>
+            <!-- RIGHT BOX -->
+
+            <div class="flexbox-item fb-right">
+
+                <div>
+
+                    <p class="right-title">Overview</p>
+
                 </div>
 
             </div>
-            <!-- RIGHT BOX -->
-            <div class="flexbox-item fb-right"></div>
         </div>
 
 
