--- a/index.html
+++ b/index.html
@@ -209,12 +209,121 @@
             <div class="flexbox-item fb-right">
 
                 <div>
-                    <p class="right-title">Overview</p>
+                    <p class="right-title">Overview Dublin 2020</p>
                 </div>
+
+                <div>
+                    <table class="dub-info-table">
+                        <tr>
+                            <th>Party</th>
+                            <th>First Pref Votes</th>
+                            <th>Seats</th>
+                            <th>Change</th>
+                        </tr>
+                        <tr>
+                            <td>Sinn Fein</td>
+                            <td>150,000</td>
+                            <td>10</td>
+                            <td>+7</td>
+                        </tr>
+                        <tr>
+                            <td>Fine Gael</td>
+                            <td>108,000</td>
+                            <td>10</td>
+                            <td>-5</td>
+                        </tr>
+                        <tr>
+                            <td>Green Party</td>
+                            <td>85,000</td>
+                            <td>8</td>
+                            <td>+7</td>
+                        </tr>
+                        <tr>
+                            <td>Fianna Fáil</td>
+                            <td>69,000</td>
+                            <td>7</td>
+                            <td>+4</td>
+                        </tr>
+                        <tr>
+                            <td>S-PBP</td>
+                            <td>50,000</td>
+                            <td>4</td>
+                            <td>-1</td>
+                        </tr>
+                        <tr>
+                            <td>Soc Dems</td>
+                            <td>42,000</td>
+                            <td>3</td>
+                            <td>+2</td>
+                        </tr>
+                        <tr>
+                            <td>Labour</td>
+                            <td>32,000</td>
+                            <td>2</td>
+                            <td>-</td>
+                        </tr>
+                        <tr>
+                            <td>Ind4Change</td>
+                            <td>15,000</td>
+                            <td>1</td>
+                            <td>-</td>
+                        </tr>
+
+
+
+
+
+
+                    </table>
+
+
+                </div>
+
+
+
+
+
+
+
+
+
+
+
             </div>
 
 
 
+
+
+
+
+
+
+
+
+
+
+            <div>
+                <img class="dub-table" src="" alt="">
+                <img class="dub-pie" src="" alt="">
+                <img class="dub-bar-chart" src="" alt="">
+            </div>
+
+            <!-- DUBLIN FINGAL DATA -->
+
+
+            <div class="card">
+                <div class="card-back card-face ">
+                    <img class="dub-fingal-table" src="" alt="">
+                    <img class="dub-fingal-pie" src="" alt="">
+                    <img class="dub-fingla-barchart" src="" alt="">
+
+                </div>
+
+                <div class="card-front card-face">
+                    <img class="" src="" alt="">
+                </div>
+            </div>
 
 
 
