--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     <?xml version="1.0" encoding="utf-8"?>
                     <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                     <svg class="dub-seats-pie" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1300 1300"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1500 1500"
                         style="enable-background:new 0 0 800 800;" xml:space="preserve">
                         <style type="text/css">
                             .st0 {
@@ -541,8 +541,10 @@
 
 
                 </div>
-
-
+                <!-- BAR CHART -->
+                <div>
+                    <img class="dub-bars" src="/assets/img/dubbarchart.png" alt="">
+                </div>
 
 
 
