Add boiler for constit cards

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 </head>
 
 <body>
-
-
     <div class="bg">
         <div class="Main-title">Dublin Voting Preference
             <br> General Election 2020</div>
@@ -194,7 +192,6 @@
                     </g>
                 </svg>
 
-
                 <div class="bottom-text-leftbox">
                     <div class="left-side-text">
                         <p> Constituencies 11/11</p>
@@ -268,15 +265,7 @@
                             <td>1</td>
                             <td>-</td>
                         </tr>
-
-
-
-
-
-
                     </table>
-
-
                 </div>
                 <!-- SVG PIE CHART -->
                 <div>
@@ -284,7 +273,7 @@
                     <?xml version="1.0" encoding="utf-8"?>
                     <!-- Generator: Adobe Illustrator 25.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                     <svg class="dub-seats-pie" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1500 1500"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1900 1900"
                         style="enable-background:new 0 0 800 800;" xml:space="preserve">
                         <style type="text/css">
                             .st0 {
@@ -537,13 +526,82 @@
                         </g>
                     </svg>
 
-
-
-
                 </div>
                 <!-- BAR CHART -->
-                <div>
+                <!-- <div>
                     <img class="dub-bars" src="/assets/img/dubbarchart.png" alt="">
+                </div> -->
+
+                <!-- BAR CHART 2 SVG -->
+                <div>
+                    <img class="dub-bars" src="/assets/img/newbarchartjpg.jpg" alt="">
+                </div>
+                <!-- end of righthand box -->
+
+                <div class="wrapper">
+
+                    <!-- WARPPER LEFT -->
+                    <div class="wrapper-left">
+
+                        <ul>
+                            <li data-li='fingal'>
+                                <p>DUBLIN FINGAL</p>
+                            </li>
+                            <li data-li='dbn'>
+                                <p>DUB BAY NORTH</p>
+                            </li>
+                            <li data-li='dbs'>
+                                <p>DUB BAY SOUTH</p>
+                            </li>
+                            <li data-li='dc'>
+                                <p>DUBLIN CENTRAL</p>
+                            </li>
+
+                        </ul>
+                    </div>
+
+                    <!-- WRAPPER RIGHT -->
+                    <div class="wrapper-right">
+
+                        <div class="title">
+                            Dublin Constituencies
+                        </div>
+                        <div class="container">
+
+                            <div class="item fingal">
+                                Fingal
+                            </div>
+
+                            <div class="item dbn">
+                                Dublin Bay North
+                            </div>
+
+                            <div class="item dbs">
+                                Dublin Bay South
+                            </div>
+
+                            <div class="item dc">
+                                Dublin Central
+                            </div>
+
+
+
+
+
+                        </div>
+
+
+
+
+
+                    </div>
+
+
+
+
+
+
+
                 </div>
 
 
@@ -551,19 +609,14 @@
 
 
 
-                <!-- end of righthand box -->
+
+
+
+
+
+
+
             </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
             <div>
@@ -587,11 +640,6 @@
                     <img class="" src="" alt="">
                 </div>
             </div>
-
-
-
-
-
 
         </div>
     </div>
