Add second page to test js function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+    <header>
+        <ul class="header-buttons">
+            <li class="active">
+                <form class="button-form" action="index.html" method="get">
+                    <button class="btn-style nav-link active" aria-current="page">HOME<span
+                            class="sr-only"></span></button>
+                </form>
+            </li>
+            <li>
+                <form class="button-form" action="tester.html" method="get">
+                    <button class="btn-style nav-link">TESTER<span class="sr-only"></span></button>
+                </form>
+            </li>
+        </ul>
+    </header>
+
+
     <div class="bg">
         <div class="Main-title">Dublin Voting Preference
             <br> General Election 2020</div>
@@ -538,86 +555,7 @@
                 </div>
                 <!-- end of righthand box -->
 
-                <div class="wrapper">
-
-                    <!-- WARPPER LEFT -->
-                    <div class="wrapper-left">
-
-                        <ul>
-                            <li data-li='fingal'>
-                                <p>DUBLIN FINGAL</p>
-                            </li>
-                            <li data-li='dbn'>
-                                <p>DUB BAY NORTH</p>
-                            </li>
-                            <li data-li='dbs'>
-                                <p>DUB BAY SOUTH</p>
-                            </li>
-                            <li data-li='dc'>
-                                <p>DUBLIN CENTRAL</p>
-                            </li>
-
-                        </ul>
-                    </div>
-
-                    <!-- WRAPPER RIGHT -->
-                    <div class="wrapper-right">
-
-                        <div class="title">
-                            Dublin Constituencies
-                        </div>
-                        <div class="container">
-
-                            <div class="item fingal">
-                                Fingal
-                            </div>
-
-                            <div class="item dbn">
-                                Dublin Bay North
-                            </div>
-
-                            <div class="item dbs">
-                                Dublin Bay South
-                            </div>
-
-                            <div class="item dc">
-                                Dublin Central
-                            </div>
-
-
-
-
-
-                        </div>
-
-
-
-
-
-                    </div>
-
-
-
-
-
-
-
-                </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div>
-
 
             <div>
                 <img class="dub-table" src="" alt="">
