--- a/tester.html
+++ b/tester.html
@@ -39,7 +39,7 @@
                     <li data-li='fingal' class="active">
                         <p>DUBLIN FINGAL</p>
                     </li>
-                    <li data-li='dbn' class="active">
+                    <li data-li='dbn'>
                         <p>DUB BAY NORTH</p>
                     </li>
                     <li data-li='dbs'>
@@ -67,21 +67,21 @@
                         </div>
                     </div>
 
-                    <div class="item dbn">
+                    <div class="item dbn" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Bay North</p>
                         </div>
                     </div>
 
-                    <div class="item dbs">
+                    <div class="item dbs" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Bay South</p>
                         </div>
                     </div>
 
-                    <div class="item dc">
+                    <div class="item dc" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Central</p>
