Add new style to right wrapper

--- a/tester.html
+++ b/tester.html
@@ -65,6 +65,14 @@
                             <div class="img"></div>
                             <p>Dublin Fingal</p>
                         </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus. </p>
                     </div>
 
                     <div class="item dbn" style="display: none;">
@@ -72,6 +80,16 @@
                             <div class="img"></div>
                             <p>Dublin Bay North</p>
                         </div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                        scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id. Vitae
+                        proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
+                        placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                        volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                        Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat commodo
+                        sed egestas egestas fringilla phasellus. Auctor neque vitae tempus quam. Id diam maecenas
+                        ultricies mi eget mauris pharetra et. Consectetur adipiscing elit duis tristique sollicitudin
+                        nibh sit.
                     </div>
 
                     <div class="item dbs" style="display: none;">
@@ -79,6 +97,18 @@
                             <div class="img"></div>
                             <p>Dublin Bay South</p>
                         </div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                        scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id. Vitae
+                        proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
+                        placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                        volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                        Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat commodo
+                        sed egestas egestas fringilla phasellus. Auctor neque vitae tempus quam. Id diam maecenas
+                        ultricies mi eget mauris pharetra et. Consectetur adipiscing elit duis tristique sollicitudin
+                        nibh sit.
+
+
                     </div>
 
                     <div class="item dc" style="display: none;">
@@ -86,6 +116,14 @@
                             <div class="img"></div>
                             <p>Dublin Central</p>
                         </div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                        scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                        Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                        est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                        volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                        Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                        commodo sed egestas egestas fringilla phasellus.
                     </div>
                 </div>
             </div>
