Add second page js and styles

--- a/tester.html
+++ b/tester.html
@@ -65,7 +65,7 @@
                             <div class="img"></div>
                             <p>Dublin Fingal</p>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        <p>This is my fingal text paragraph please see here for infor re:Fingal!
                             labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
@@ -80,16 +80,18 @@
                             <div class="img"></div>
                             <p>Dublin Bay North</p>
                         </div>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                        scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id. Vitae
-                        proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
-                        placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
-                        volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
-                        Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat commodo
-                        sed egestas egestas fringilla phasellus. Auctor neque vitae tempus quam. Id diam maecenas
-                        ultricies mi eget mauris pharetra et. Consectetur adipiscing elit duis tristique sollicitudin
-                        nibh sit.
+                        <p>
+                            This is my Dublin Bay North text paragraph please see here for infor re:DBN!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae
+                            proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
+                            placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo
+
+                        </p>
                     </div>
 
                     <div class="item dbs" style="display: none;">
@@ -97,18 +99,16 @@
                             <div class="img"></div>
                             <p>Dublin Bay South</p>
                         </div>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                        scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id. Vitae
-                        proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
-                        placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
-                        volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
-                        Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat commodo
-                        sed egestas egestas fringilla phasellus. Auctor neque vitae tempus quam. Id diam maecenas
-                        ultricies mi eget mauris pharetra et. Consectetur adipiscing elit duis tristique sollicitudin
-                        nibh sit.
-
-
+                        <p>
+                            This is my Dublin Bay South text paragraph please see here for infor re:DBS!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae
+                            proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet est
+                            placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                        </p>
                     </div>
 
                     <div class="item dc" style="display: none;">
@@ -116,14 +116,15 @@
                             <div class="img"></div>
                             <p>Dublin Central</p>
                         </div>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
-                        scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                        Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                        est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
-                        volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
-                        Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
-                        commodo sed egestas egestas fringilla phasellus.
+                        <p>
+                            This is my Dublin Central text paragraph please see here for infor re:DC!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
                     </div>
                 </div>
             </div>
