--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         l-2.17-13.67l-12.95-13.45l-3.92-12.2l-4.55-7.71l-14.29-13.44l3.37-4.1l3.47-0.23l4.11,2.21l8.68-3.43L672.07,759.86z" /></a>
 
                         <!-- DUBLIN FINGAL -->
-                        <a xlink:title="Dublin Fingal" xlink:href="">
+                        <a xlink:title="Dublin Fingal" xlink:href="tester.html#fing">
                             <path class="fingal" d="M957.9,383.95l-6.01-1.44l-1.5-2.99l-5.95,1.16l-2.95-6.9l-4.18,0.35l-5.77-5.46l-5.56-0.53l6.41-4.6
 		l-0.55-5.12l5.99-7.05l7.19,1.13l2.61,3.26l5.09-0.92l2.39-3.65l3.85-0.81l2.36-2.86l6.6,0.09l2.24,2.9l6.32,4.06l4.19-0.82
 		l5.87,3.82l-3.12,2.1l-3.5-0.46l-8.49,1.91l-6.08,9.55l4.02,5.11l-5.8,4.14l-2.54,2.36L957.9,383.95z M800.26,565.36l-8.02-1.01
@@ -113,7 +113,7 @@
 
 
                         <!-- DUBLIN WEST -->
-                        <a xlink:title="Dublin West" xlink:href="">
+                        <a xlink:title="Dublin West" xlink:href="tester.html#dwest">
                             <path class="dubwest" d="M499.39,556.27l-66.43,35.07l-9.31,8.17l3.04,1.91l7.58,0.79l4.69,4.75l13.81,2.14l2.04,3.06l6.47,2.51
 		l6.63,0.02l5.75-3.41l11.08-0.88l9.23,3.47l6.63,1.31l1.56,4.61l5.25,5.49l0.9,8.68l4.71,3.72l-8.75,5.62l6.87,3.24l-10.23,4.2
 		l10.42,8.01l11.86,21.63l-20.13-0.33l-27.6,4.43l-17.24-1.39l-20.21-17.56l-3.15,2.31l-3.96,0.28l-10.04-0.76l4.48-4.33l-0.22-3.44
@@ -134,7 +134,7 @@
         l-11.02-4.28L588.02,636.04z" /></a>
 
                         <!-- DUBLIN BAY NORTH -->
-                        <a xlink:title="Dublin Bay North" xlink:href="">
+                        <a xlink:title="Dublin Bay North" xlink:href="tester.html#dbaynorth">
                             <path class="dubbnorth" d="M800.19,610.65l-26.67,13.64l-11.43,7.76l-17.9,15.6l-18.7,22.82l-17.83-12.63l5.03-2.45l2.35-6.41l3.57-1.37
 		l1.13-3.05l3.77-3.67l3.05-5.88l5.16-1.86l5.07-2.94l0.1-3.63l2.85-1.52l3.97,2.99l6.71-8.21l3.14,1.26l7.18-6.01l7.8-3.9
 		l11.71-3.38l12.07-0.8l12.49-3.7L800.19,610.65z M646.24,542.26l29.19,7.75l7.6-0.54l9.93,2.73l13.29-1.97l7.23,0.85l2.18-2.32
@@ -225,6 +225,8 @@
                 <div>
                     <p class="right-title">Overview Dublin 2020</p>
                 </div>
+
+                <!-- TABLE PG1 -->
 
                 <div>
                     <table class="dub-info-table">
