--- a/tester.html
+++ b/tester.html
@@ -26,7 +26,7 @@
 
     <div class="bg-pg2">
 
-        <div class="Main-title">Dublin Voting Preference
+        <div class="Main-title2">Dublin Voting Preference
             <br> General Election 2020</div>
 
 
@@ -48,6 +48,30 @@
                     <li data-li='dc'>
                         <p>DUBLIN CENTRAL</p>
                     </li>
+                    <li data-li='dmw'>
+                        <p>DUBLIN MID WEST</p>
+                    </li>
+                    <li data-li='dnw'>
+                        <p>DUB NORTH WEST</p>
+                    </li>
+                    <li data-li='drd'>
+                        <p>DUB RATHDOWN</p>
+                    </li>
+                    <li data-li='dsc'>
+                        <p>DUBLIN SOUTH CENTRAL</p>
+                    </li>
+                    <li data-li='dsw'>
+                        <p>DUBLIN SOUTH WEST</p>
+                    </li>
+                    <li data-li='dw'>
+                        <p>DUB WEST</p>
+                    </li>
+                    <li data-li='dl'>
+                        <p>DÚN LAOGHAIRE</p>
+                    </li>
+
+
+
 
                 </ul>
             </div>
@@ -60,7 +84,7 @@
                 </div>
                 <div class="container">
 
-                    <div class="item fingal">
+                    <div class="item fingal" id="fing">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Fingal</p>
@@ -73,9 +97,76 @@
                             volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
                             Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
                             commodo sed egestas egestas fringilla phasellus. </p>
+
+
+                        <div>
+                            <!-- TABLE FINGAL -->
+                            <div>
+                                <table class="const-table">
+                                    <tr class="table-head">
+                                        <th>Party</th>
+                                        <th>First Pref Votes</th>
+                                        <th>Seats</th>
+                                        <th>Change</th>
+                                    </tr>
+                                    <tr>
+                                        <td>Sinn Fein</td>
+                                        <td>150,000</td>
+                                        <td>10</td>
+                                        <td>+7</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Fine Gael</td>
+                                        <td>108,000</td>
+                                        <td>10</td>
+                                        <td>-5</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Green Party</td>
+                                        <td>85,000</td>
+                                        <td>8</td>
+                                        <td>+7</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Fianna Fáil</td>
+                                        <td>69,000</td>
+                                        <td>7</td>
+                                        <td>+4</td>
+                                    </tr>
+                                    <tr>
+                                        <td>S-PBP</td>
+                                        <td>50,000</td>
+                                        <td>4</td>
+                                        <td>-1</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Soc Dems</td>
+                                        <td>42,000</td>
+                                        <td>3</td>
+                                        <td>+2</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Labour</td>
+                                        <td>32,000</td>
+                                        <td>2</td>
+                                        <td>-</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ind4Change</td>
+                                        <td>15,000</td>
+                                        <td>1</td>
+                                        <td>-</td>
+                                    </tr>
+                                </table>
+                            </div>
+
+
+
+
+                        </div>
                     </div>
 
-                    <div class="item dbn" style="display: none;">
+                    <div class="item dbn" id="dbaynorth" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Bay North</p>
@@ -126,6 +217,118 @@
                             Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
                             commodo sed egestas egestas fringilla phasellus.</p>
                     </div>
+                    <div class="item dmw" style="display: none;">
+                        <div class="item_info">
+                            <div class="img"></div>
+                            <p>Dublin Mid West</p>
+                        </div>
+                        <p>
+                            This is my Dublin MW text paragraph please see here for infor re:DMW!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
+                    </div>
+
+                    <div class="item dnw" style="display: none;">
+                        <div class="item_info">
+                            <div class="img"></div>
+                            <p>Dublin North West</p>
+                        </div>
+                        <p>
+                            This is my Dublin NW text paragraph please see here for infor re:DNW!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
+                    </div>
+
+                    <div class="item drd" style="display: none;">
+                        <div class="item_info">
+                            <div class="img"></div>
+                            <p>Dublin Rathdown</p>
+                        </div>
+                        <p>
+                            This is my Dublin Rathdown text paragraph please see here for infor re:DRD!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
+                    </div>
+
+                    <div class="item dsc" style="display: none;">
+                        <div class="item_info">
+                            <div class="img"></div>
+                            <p>Dublin South Central</p>
+                        </div>
+                        <p>
+                            This is my Dublin South Central text paragraph please see here for infor re:DSC!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
+                    </div>
+
+                    <div class="item dsw" style="display: none;">
+                        <div class="item_info">
+                            <div class="img"></div>
+                            <p>Dublin South West</p>
+                        </div>
+                        <p>
+                            This is my Dublin South West text paragraph please see here for infor re:DSW!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
+                    </div>
+
+                    <div class="item dw" id="dwest" style="display: none;">
+                        <div class="item_info">
+                            <div class="img"></div>
+                            <p>Dublin West</p>
+                        </div>
+                        <p>
+                            This is my Dublin West text paragraph please see here for infor re:DW!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
+                    </div>
+
+                    <div class="item dl" style="display: none;">
+                        <div class="item_info">
+                            <div class="img"></div>
+                            <p>Dun Laoighaire</p>
+                        </div>
+                        <p>
+                            This is my Dún Laoghaire text paragraph please see here for infor re:DL!
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
+                            commodo sed egestas egestas fringilla phasellus.</p>
+                    </div>
+                    <!-- END CONTAINER -->
                 </div>
             </div>
         </div>
