--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GE 2020 - Dublin</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
+        integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -134,7 +136,7 @@
         l-11.02-4.28L588.02,636.04z" /></a>
 
                         <!-- DUBLIN BAY NORTH -->
-                        <a xlink:title="Dublin Bay North" xlink:href="tester.html#dbaynorth">
+                        <a xlink:title="Dublin Bay North" xlink:href="tester.html/dbaynorth">
                             <path class="dubbnorth" d="M800.19,610.65l-26.67,13.64l-11.43,7.76l-17.9,15.6l-18.7,22.82l-17.83-12.63l5.03-2.45l2.35-6.41l3.57-1.37
 		l1.13-3.05l3.77-3.67l3.05-5.88l5.16-1.86l5.07-2.94l0.1-3.63l2.85-1.52l3.97,2.99l6.71-8.21l3.14,1.26l7.18-6.01l7.8-3.9
 		l11.71-3.38l12.07-0.8l12.49-3.7L800.19,610.65z M646.24,542.26l29.19,7.75l7.6-0.54l9.93,2.73l13.29-1.97l7.23,0.85l2.18-2.32
@@ -174,7 +176,7 @@
         l8.89,5.71l2.59,3.96l0.22,3.44l-4.48,4.33L430.91,668.13z" /></a>
 
                         <!-- DUBLIN SOUTH CENTRAL  -->
-                        <a xlink:title="Dublin South Central" xlink:href="">
+                        <a xlink:title="Dublin South Central" xlink:href="tester.html#dubSouthCent">
                             <path class="dubmidwest" d="M523.2,680.38l36.77,6.34l-0.26,16.81l-4.38,10.07l-0.38,7.54l-13.17-2.16l-6.23,7.22l-13.46,3.68l4.43,8.72
 		l5.16,5.18l-18.8,20.76l8.67,18.06l-5.03,5.21l-31.67-15.45l-18.74-23.38l-2.69,3.35l-11.15,5.71l-12.38,18.33l-14.71-9.05
 		l-12.7-19.64l-27.62-41.8l-2.2-7.1l0.36-8.28l4.97,1.77l5.25-3.91l14.91,2.02l2.18-5.84l9.57,2.16l1.78-3.45l3.13-13.86l4.41,1.84
@@ -586,7 +588,8 @@
 
 
     </div>
-
+    <script src="script.js"></script>
+    <script src="direct_map.js"></script>
 </body>
 
 </html>
