--- a/tester.html
+++ b/tester.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GE 2020 - Dublin</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js"
+        integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -265,7 +267,7 @@
                             commodo sed egestas egestas fringilla phasellus.</p>
                     </div>
 
-                    <div class="item dsc" style="display: none;">
+                    <div id="dubSouthCent" class="item dsc" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin South Central</p>
