Map click function begin

--- a/tester.html
+++ b/tester.html
@@ -38,10 +38,10 @@
             <div class="wrapper-left">
 
                 <ul>
-                    <li data-li='fingal' class="active">
+                    <li data-li='fingal' id="fing" class="active">
                         <p>DUBLIN FINGAL</p>
                     </li>
-                    <li data-li='dbn'>
+                    <li data-li='dbn' id="dbaynorth">
                         <p>DUB BAY NORTH</p>
                     </li>
                     <li data-li='dbs'>
@@ -59,13 +59,13 @@
                     <li data-li='drd'>
                         <p>DUB RATHDOWN</p>
                     </li>
-                    <li data-li='dsc'>
+                    <li data-li='dsc' id="dubSouthCent">
                         <p>DUBLIN SOUTH CENTRAL</p>
                     </li>
                     <li data-li='dsw'>
                         <p>DUBLIN SOUTH WEST</p>
                     </li>
-                    <li data-li='dw'>
+                    <li data-li='dw' id="dwest">
                         <p>DUB WEST</p>
                     </li>
                     <li data-li='dl'>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="container">
 
-                    <div class="item fingal" id="fing">
+                    <div class="item fingal">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Fingal</p>
@@ -168,7 +168,7 @@
                         </div>
                     </div>
 
-                    <div class="item dbn" id="dbaynorth" style="display: none;">
+                    <div class="item dbn" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Bay North</p>
@@ -267,7 +267,7 @@
                             commodo sed egestas egestas fringilla phasellus.</p>
                     </div>
 
-                    <div id="dubSouthCent" class="item dsc" style="display: none;">
+                    <div class="item dsc" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin South Central</p>
@@ -299,7 +299,7 @@
                             commodo sed egestas egestas fringilla phasellus.</p>
                     </div>
 
-                    <div class="item dw" id="dwest" style="display: none;">
+                    <div class="item dw" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin West</p>
@@ -337,6 +337,7 @@
         <!-- END BG DIV -->
     </div>
     <script src="script.js"></script>
+    <script src="direct_map.js"></script>
 </body>
 
 
