--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
                         <!-- DUBLIN WEST -->
-                        <a xlink:title="Dublin West" xlink:href="tester.html#dwest">
+                        <a xlink:title="Dublin West" href="tester.html#dwest" xlink:href="">
                             <path class="dubwest" d="M499.39,556.27l-66.43,35.07l-9.31,8.17l3.04,1.91l7.58,0.79l4.69,4.75l13.81,2.14l2.04,3.06l6.47,2.51
 		l6.63,0.02l5.75-3.41l11.08-0.88l9.23,3.47l6.63,1.31l1.56,4.61l5.25,5.49l0.9,8.68l4.71,3.72l-8.75,5.62l6.87,3.24l-10.23,4.2
 		l10.42,8.01l11.86,21.63l-20.13-0.33l-27.6,4.43l-17.24-1.39l-20.21-17.56l-3.15,2.31l-3.96,0.28l-10.04-0.76l4.48-4.33l-0.22-3.44
@@ -176,7 +176,7 @@
         l8.89,5.71l2.59,3.96l0.22,3.44l-4.48,4.33L430.91,668.13z" /></a>
 
                         <!-- DUBLIN SOUTH CENTRAL  -->
-                        <a xlink:title="Dublin South Central" xlink:href="tester.html#dubSouthCent">
+                        <a xlink:title="Dublin South Central" xlink:href="/tester.html#dubSouthCent">
                             <path class="dubmidwest" d="M523.2,680.38l36.77,6.34l-0.26,16.81l-4.38,10.07l-0.38,7.54l-13.17-2.16l-6.23,7.22l-13.46,3.68l4.43,8.72
 		l5.16,5.18l-18.8,20.76l8.67,18.06l-5.03,5.21l-31.67-15.45l-18.74-23.38l-2.69,3.35l-11.15,5.71l-12.38,18.33l-14.71-9.05
 		l-12.7-19.64l-27.62-41.8l-2.2-7.1l0.36-8.28l4.97,1.77l5.25-3.91l14.91,2.02l2.18-5.84l9.57,2.16l1.78-3.45l3.13-13.86l4.41,1.84
