Unfix map links

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         l-11.02-4.28L588.02,636.04z" /></a>
 
                         <!-- DUBLIN BAY NORTH -->
-                        <a xlink:title="Dublin Bay North" xlink:href="tester.html/dbaynorth">
+                        <a xlink:title="Dublin Bay North" xlink:href="tester.html#dbaynorth">
                             <path class="dubbnorth" d="M800.19,610.65l-26.67,13.64l-11.43,7.76l-17.9,15.6l-18.7,22.82l-17.83-12.63l5.03-2.45l2.35-6.41l3.57-1.37
 		l1.13-3.05l3.77-3.67l3.05-5.88l5.16-1.86l5.07-2.94l0.1-3.63l2.85-1.52l3.97,2.99l6.71-8.21l3.14,1.26l7.18-6.01l7.8-3.9
 		l11.71-3.38l12.07-0.8l12.49-3.7L800.19,610.65z M646.24,542.26l29.19,7.75l7.6-0.54l9.93,2.73l13.29-1.97l7.23,0.85l2.18-2.32
