--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         l3.84-1.98l4.59,6.77l5.5-0.94l4.59,1.75L643.94,765.27z" /></a>
 
                         <!-- DUN LAOGHAIRE -->
-                        <a xlink:title="Dún Laoghaire" xlink:href="">
+                        <a data-a="dl" xlink:title="Dún Laoghaire" xlink:href="tester.html#dunLaogh">
                             <path class="dunlaogh"
                                 d="M854.24,847.52l-1.9,5.38l-5.03-3.15l-0.61-5.05l4.18-0.02L854.24,847.52z M672.07,759.86l14.22,9.92
 		l19.12,10.83l27.8,9.63l1.37,2.77l7.26,3.16l5.45,0.44l3.75-4.34l2.99,1.69l4.86-0.12l2.86-3.51l5.62,4.21l5.03,0.43l1.45-2.72
