--- a/tester.html
+++ b/tester.html
@@ -68,7 +68,7 @@
                     <li data-li='dw' id="dwest">
                         <p>DUB WEST</p>
                     </li>
-                    <li data-li='dl'>
+                    <li data-li='dl' id="dunLaogh">
                         <p>DÚN LAOGHAIRE</p>
                     </li>
 
