--- a/tester.html
+++ b/tester.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="loadDetail()">
     <header>
         <ul class="header-buttons">
             <li class="active">
@@ -38,34 +38,34 @@
             <div class="wrapper-left">
 
                 <ul>
-                    <li data-li='fingal' id="fing" class="active">
+                    <li data-li='fingal' id="fing">
                         <p>DUBLIN FINGAL</p>
                     </li>
                     <li data-li='dbn' id="dbaynorth">
                         <p>DUB BAY NORTH</p>
                     </li>
-                    <li data-li='dbs'>
+                    <li data-li='dbs' id="dubBSouth">
                         <p>DUB BAY SOUTH</p>
                     </li>
-                    <li data-li='dc'>
+                    <li data-li='dc' id="dubCent">
                         <p>DUBLIN CENTRAL</p>
                     </li>
-                    <li data-li='dmw'>
+                    <li data-li='dmw' id="dubMWest">
                         <p>DUBLIN MID WEST</p>
                     </li>
-                    <li data-li='dnw'>
+                    <li data-li='dnw' id="dubNWest">
                         <p>DUB NORTH WEST</p>
                     </li>
-                    <li data-li='drd'>
+                    <li data-li='drd' id="dubRath">
                         <p>DUB RATHDOWN</p>
                     </li>
                     <li data-li='dsc' id="dubSouthCent">
                         <p>DUBLIN SOUTH CENTRAL</p>
                     </li>
-                    <li data-li='dsw'>
+                    <li data-li='dsw' id="dubSWest">
                         <p>DUBLIN SOUTH WEST</p>
                     </li>
-                    <li data-li='dw' id="dwest">
+                    <li data-li='dw' id="dWest">
                         <p>DUB WEST</p>
                     </li>
                     <li data-li='dl' id="dunLaogh">
