--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <g id="regions-layer">
 
                         <!-- RATHDOWN -->
-                        <a xlink:title="Dublin Rathdown" xlink:href="">
+                        <a xlink:title="Dublin Rathdown" xlink:href="tester.html#dubRath">
                             <path class="dubrath" d="M643.94,765.27l14.29,13.44l4.55,7.71l3.92,12.2l12.95,13.45l2.17,13.67l-5.49,4.23l-6.11,16.46l10.49-2.42
 		l8.91,5.2l4.21,6.2l5.13,20.13l7.16,7.67l4.19,3.27l-3.72,2.18l-7.94-0.26l-6.9,1.16l-1.34,7.73l-4.21,3.23l3.46,5.04l6.07,3.52
 		l4.65,1.74l0.06,6.54l3.83,3.97l3.06,10.04l-6.54,2.58l-9.18-3.22l-4.69,2.36l11.91,19.26l0.4,9l-19.73,9.73l-11.66-1.33
@@ -115,7 +115,7 @@
 
 
                         <!-- DUBLIN WEST -->
-                        <a xlink:title="Dublin West" href="tester.html#dwest" xlink:href="">
+                        <a xlink:title="Dublin West" xlink:href="tester.html#dWest">
                             <path class="dubwest" d="M499.39,556.27l-66.43,35.07l-9.31,8.17l3.04,1.91l7.58,0.79l4.69,4.75l13.81,2.14l2.04,3.06l6.47,2.51
 		l6.63,0.02l5.75-3.41l11.08-0.88l9.23,3.47l6.63,1.31l1.56,4.61l5.25,5.49l0.9,8.68l4.71,3.72l-8.75,5.62l6.87,3.24l-10.23,4.2
 		l10.42,8.01l11.86,21.63l-20.13-0.33l-27.6,4.43l-17.24-1.39l-20.21-17.56l-3.15,2.31l-3.96,0.28l-10.04-0.76l4.48-4.33l-0.22-3.44
@@ -128,7 +128,7 @@
 
                         <!-- DUBLIN NORTH WEST -->
 
-                        <a xlink:title="Dublin North West" xlink:href="">
+                        <a xlink:title="Dublin North West" xlink:href="tester.html#dubNWest">
                             <path class="dubnwest" d="M588.02,636.04l-3.05,4.88l-1.62,3.71l-4.24,6.13l-18.45-6.17l-2.16-7.91l-16.17-10.74l-8.15-10.2l-7.82-0.03
 		l-6.46,2.37l-9.2,0.68l-4.78-3.6l-5.31,0.02l-6.63-1.31l-9.23-3.47l-11.08,0.88l-5.75,3.41l-6.63-0.02l-6.47-2.51l-2.04-3.06
 		l-13.81-2.14l-4.69-4.75l-7.58-0.79l-3.04-1.91l9.31-8.17l66.43-35.07l3.04-1.34l8.89-3.19l7.19-1.84l6.44-0.97l13-1.12l91.85-5.52
@@ -151,7 +151,7 @@
         l-5.45-11.27l15.71,1.63l-0.36,7.53L889.94,565.13z" /></a>
 
                         <!-- DUBLIN CENTRAL -->
-                        <a xlink:title="Dublin Central" xlink:href="">
+                        <a xlink:title="Dublin Central" xlink:href="tester.html#dubCent">
                             <path class="dubcentral" d="M588.02,636.04l2.38,2.92l3.37,0.75l4.78,5.21l11.69,6.21l8.94,7.3l4.42,1.67l6.31-4.13l14,4.62l11.63,0.9
 		l-0.54,6.79l11.38,0.81l11.56,0.1l0.25,6.04l10.68-0.03l-1.37,11.17l-2.67-2.4l-1.08-3.97l-1.1,7.01l-7.26,0.42l-2.74-6.9
 		l-1.5,6.57l-4.31,0.38l-14.38-1.12l-5.42-6.99l-9.02,0.42l-2.12-2.37l-1.54,6.31l-4.8,0.3l-0.25,2.82l-4.38-1.67l-20.35-2.2
@@ -160,7 +160,7 @@
         L588.02,636.04z" /></a>
 
                         <!-- DUBLIN MID WEST -->
-                        <a xlink:title="Dublin Mid West" xlink:href="">
+                        <a xlink:title="Dublin Mid West" xlink:href="tester.html#dubMWest">
                             <path class="dubmidwest" d="M430.91,668.13l-1.68,3.1l-4.41-1.84l-3.13,13.86l-1.78,3.45l-9.57-2.16l-2.18,5.84l-14.91-2.02l-5.25,3.91
 		l-4.97-1.77l-0.36,8.28l2.2,7.1l27.62,41.8l-47,13.37l-13.52,10.76l-20.63,11.48l-12.52,15.82l-7.66,5.43l6.21,3.09l0.27,4.08
 		l-0.17,2.82l-5.59,1.65l0.24,9.58l2.48,3.71l4.88,0.55l2.13,5.72l-0.04,7.9l-4.25,9.92l2.34,4.38l-0.15,4.88l2.57,3.15l-3.58,15.63
@@ -176,14 +176,14 @@
         l8.89,5.71l2.59,3.96l0.22,3.44l-4.48,4.33L430.91,668.13z" /></a>
 
                         <!-- DUBLIN SOUTH CENTRAL  -->
-                        <a xlink:title="Dublin South Central" xlink:href="/tester.html#dubSouthCent">
+                        <a xlink:title="Dublin South Central" xlink:href="tester.html#dubSouthCent">
                             <path class="dubmidwest" d="M523.2,680.38l36.77,6.34l-0.26,16.81l-4.38,10.07l-0.38,7.54l-13.17-2.16l-6.23,7.22l-13.46,3.68l4.43,8.72
 		l5.16,5.18l-18.8,20.76l8.67,18.06l-5.03,5.21l-31.67-15.45l-18.74-23.38l-2.69,3.35l-11.15,5.71l-12.38,18.33l-14.71-9.05
 		l-12.7-19.64l-27.62-41.8l-2.2-7.1l0.36-8.28l4.97,1.77l5.25-3.91l14.91,2.02l2.18-5.84l9.57,2.16l1.78-3.45l3.13-13.86l4.41,1.84
         l1.68-3.1l3.96-0.28l3.15-2.31l20.21,17.56l17.24,1.39l27.6-4.43L523.2,680.38z" /></a>
 
                         <!-- DUBLIN BAY SOUTH -->
-                        <a xlink:title="Dublin Bay South" xlink:href="">
+                        <a xlink:title="Dublin Bay South" xlink:href="tester.html#dubBSouth">
                             <path class="dubbsouth" d="M604.57,682.98l20.35,2.2l4.38,1.67l15.61,4.16l3.57-1.17l26.7,3.83l3.96,1.3l3.55,0.83l11.09,1.08l10.12,0.03
 		l-2.52,3.55l-2.89,3.32l-15.2,0.3l-3.11,5.19l-22.26-3.96l-6.33,5.51l3.68,3.79l6.36,16.42l1.09,13.67l2.12,5.09l7.21,10.08
 		l-8.5-0.15l-8.68,3.43l-4.11-2.21l-3.47,0.23l-3.37,4.1l-3.7-2.33l-4.59-1.75l-5.5,0.94l-4.59-6.77l-3.84,1.98l-1.78-2.49
@@ -192,7 +192,7 @@
         l13.17,2.16l0.38-7.54l4.38-10.07l0.26-16.81l26.61-5.53L604.57,682.98z" /></a>
 
                         <!-- DUBLIN SOUTH WEST -->
-                        <a xlink:title="Dublin South West" xlink:href="">
+                        <a xlink:title="Dublin South West" xlink:href="tester.html#dubSWest">
                             <path class="dubswest" d="M521.56,782.6l8.42,6.52l7.91-5.54l-0.11-6.01l3.57-1.72l14.69-0.05l9.67,2.13l-4,1.94l-6.51,6.54
 		l-10.48-0.66l6.96,5.65l-3.36,6.23l7.13,3.41l-0.34,4.64l0.07,3.74l1.66,2.48l3.91-0.09l-1.61,3l1.31,6l-3,9.56l3.48,1.57
 		l-2.58,5.87l0.88,4.33l-3.01,2.14l-5.8-2.53l3.31,17.52l-9.28,0.45l-8.73,6.93l-9.17,2.57l-4.88,5.06l0.01,9.46l-3.46,2.13
