Add start of flip function

--- a/tester.html
+++ b/tester.html
@@ -86,17 +86,22 @@
                 </div>
                 <div class="container">
 
-                    <div class="item fingal">
+                    <div class="item fingal ">
+                        <!-- <div class="card-back">  -->
                         <div class="item_info">
                             <div class="img"></div>
                             <p>Dublin Fingal</p>
                         </div>
                         <p>This is my fingal text paragraph please see here for infor re:Fingal!
-                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
+                            labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique.
+                            Nunc
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
-                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
-                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
+                            Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit
+                            amet
+                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim
+                            blandit
+                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta
+                            non.
                             Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
                             commodo sed egestas egestas fringilla phasellus. </p>
 
@@ -166,6 +171,12 @@
 
 
                         </div>
+                        <!-- </div> -->
+                        <!-- <div class="card-front">
+
+
+                        </div> -->
+
                     </div>
 
                     <div class="item dbn" style="display: none;">
