Add individual map imgs and sized

--- a/tester.html
+++ b/tester.html
@@ -89,7 +89,8 @@
                     <div class="item fingal ">
                         <!-- <div class="card-back">  -->
                         <div class="item_info">
-                            <div class="img"></div>
+                            <div class="img">
+                            </div>
                             <p>Dublin Fingal</p>
                         </div>
                         <p>This is my fingal text paragraph please see here for infor re:Fingal!
@@ -200,7 +201,8 @@
 
                     <div class="item dbs" style="display: none;">
                         <div class="item_info">
-                            <div class="img"></div>
+                            <div class="img">
+                            </div>
                             <p>Dublin Bay South</p>
                         </div>
                         <p>
