Add tables and new title styles to pg2

--- a/tester.html
+++ b/tester.html
@@ -91,7 +91,7 @@
                         <div class="item_info">
                             <div class="img">
                             </div>
-                            <p>Dublin <br> Fingal</p>
+                            <p>Dublin Fingal</p>
                         </div>
                         <p class="const-para-text">This is my fingal text paragraph please see here for infor re:Fingal!
                             labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique.
