--- a/tester.html
+++ b/tester.html
@@ -66,7 +66,7 @@
                         <p>DUBLIN SOUTH WEST</p>
                     </li>
                     <li data-li='dw' id="dWest">
-                        <p>DUB WEST</p>
+                        <p>DUBLIN WEST</p>
                     </li>
                     <li data-li='dl' id="dunLaogh">
                         <p>DÚN LAOGHAIRE</p>
@@ -550,7 +550,7 @@
                     <div class="item dnw" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
-                            <p>Dublin North West</p>
+                            <p class="bigger-title">Dublin North West</p>
                         </div>
                         <p class="const-para-text">
                             This is my Dublin NW text paragraph please see here for infor re:DNW!
@@ -730,7 +730,7 @@
                     <div class="item dsc" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
-                            <p>Dublin South Central</p>
+                            <p class="biggest-title">Dublin South Central</p>
                         </div>
                         <p class="const-para-text">
                             This is my Dublin South Central text paragraph please see here for infor re:DSC!
@@ -815,7 +815,7 @@
                     <div class="item dsw" style="display: none;">
                         <div class="item_info">
                             <div class="img"></div>
-                            <p>Dublin South West</p>
+                            <p class="bigger-title">Dublin South West</p>
                         </div>
                         <p class="const-para-text">
                             This is my Dublin South West text paragraph please see here for infor re:DSW!
@@ -997,10 +997,7 @@
                             labore et dolore magna aliqua. Egestas integer eget aliquet nibh praesent tristique. Nunc
                             scelerisque viverra mauris in aliquam. Ipsum consequat nisl vel pretium lectus quam id.
                             Vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra. Ornare lectus sit amet
-                            est placerat in egestas. Habitant morbi tristique senectus et netus et. Odio ut enim blandit
-                            volutpat maecenas volutpat blandit. Felis imperdiet proin fermentum leo vel orci porta non.
-                            Congue quisque egestas diam in arcu cursus euismod quis. Odio pellentesque diam volutpat
-                            commodo sed egestas egestas fringilla phasellus.</p>
+                            est placerat in egestas. </p>
 
 
 
